tests/cases/fail/json_from_string_unsupported_field.p4
import json


class Config:
    mapping: dict[str, int]


def main() -> None:
    value = json.from_string[Config]("{}")
    print(value)
